# irc_discord_client

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/discord/: mod.rs
