[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "discord-irc-bridge"
version = "0.1.0"

[dependencies]
dotenv = "0.13.0"
irc = "0.13.6"
failure = "0.1.3"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
futures = "0.1.25"
tokio = "0.1.13"
tokio-core = "0.1.17"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "v0.6.x"

# [patch.crates-io]
# openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }

